hphp/hack/test/typecheck/unbound_name/cast_to_typedef.php
<?hh

type MyTypedef = int;

function test(dynamic $x): void {
  (MyTypedef)$x;
}
